<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ghcharactertracker.com.ghcharactertracker.ScenarioActivity">

    <Button
        android:id="@+id/healthSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="changeHealth"
        android:text="@string/minus_label"
        app:layout_constraintEnd_toStartOf="@+id/scenarioHealth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/healthAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="changeHealth"
        android:text="@string/plus_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/healthSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scenarioHealth" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/health_label"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/xp_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthSub" />

    <Button
        android:id="@+id/expSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="changeExp"
        android:text="@string/minus_label"
        app:layout_constraintEnd_toStartOf="@+id/scenarioExp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/expAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="changeExp"
        android:text="@string/plus_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/expSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scenarioExp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/money_tokens_label"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expSub" />

    <Button
        android:id="@+id/moneySub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="changeMoney"
        android:text="@string/minus_label"
        app:layout_constraintEnd_toStartOf="@+id/scenarioMoney"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/moneyAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="changeMoney"
        android:text="@string/plus_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/moneySub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scenarioMoney" />

    <EditText
        android:id="@+id/scenarioHealth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/zero_label"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/healthSub"
        app:layout_constraintEnd_toStartOf="@+id/healthAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/healthSub" />

    <EditText
        android:id="@+id/scenarioExp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/zero_label"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/expSub"
        app:layout_constraintEnd_toStartOf="@+id/expAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/expSub" />

    <EditText
        android:id="@+id/scenarioMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/zero_label"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/moneySub"
        app:layout_constraintEnd_toStartOf="@+id/moneyAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/moneySub" />

    <Button
        android:id="@+id/scenarioDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="scenarioCompleted"
        android:text="@string/complete_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/scenarioLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scenarioSuccessful" />

    <EditText
        android:id="@+id/scenarioLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scenarioSuccessful"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/scenarioSuccessful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:text="@string/completed_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/scenarioLevel"
        app:layout_constraintEnd_toStartOf="@+id/scenarioDone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scenarioLevel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/scenario_level_label"
        app:layout_constraintBottom_toTopOf="@+id/scenarioLevel"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
